--- a/BibliotecaWA/pom.xml
+++ b/BibliotecaWA/pom.xml
@@ -5,7 +5,7 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>it.dstech</groupId>
-	<artifactId>magiclibrary</artifactId>
+	<artifactId>BibliotecaWA</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<properties>
